Do not load re:consent (yet).

--- a/app/cliqz.gradle
+++ b/app/cliqz.gradle
@@ -45,4 +45,4 @@ android {
 }
 
 preBuild.dependsOn(updatePrivacyAddons)
-preBuild.dependsOn(updateConsentAddon)
+// preBuild.dependsOn(updateConsentAddon)
