--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="org.mozilla.reference.browser">
+    package="com.cliqz.reference.browser">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -23,9 +23,9 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/AppThemeNotActionBar"
-        android:name=".BrowserApplication"
+        android:name="org.mozilla.reference.browser.BrowserApplication"
         tools:ignore="UnusedAttribute">
-        <activity android:name=".BrowserActivity"
+        <activity android:name="org.mozilla.reference.browser.BrowserActivity"
             android:launchMode="singleTask"
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
@@ -39,13 +39,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".BrowserTestActivity">
+        <activity android:name="org.mozilla.reference.browser.BrowserTestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".CustomTabActivity"
+        <activity android:name="org.mozilla.reference.browser.CustomTabActivity"
             android:configChanges="keyboard|keyboardHidden|mcc|mnc|orientation|screenSize|locale|layoutDirection|smallestScreenSize|screenLayout"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden"
             android:exported="false"
@@ -54,7 +54,7 @@
             android:autoRemoveFromRecents="false"
             android:label="@string/app_name" />
 
-        <activity android:name=".IntentReceiverActivity">
+        <activity android:name="org.mozilla.reference.browser.IntentReceiverActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -82,7 +82,7 @@
         </activity>
 
         <service
-            android:name=".customtabs.CustomTabsService"
+            android:name="org.mozilla.reference.browser.customtabs.CustomTabsService"
             android:exported="true"
             tools:ignore="ExportedService">
             <intent-filter>
@@ -91,10 +91,10 @@
         </service>
 
         <activity
-          android:name=".settings.SettingsActivity"
+          android:name="org.mozilla.reference.browser.settings.SettingsActivity"
           android:label="@string/settings"
           android:theme="@style/AppTheme"
-          android:parentActivityName=".BrowserActivity" />
+          android:parentActivityName="org.mozilla.reference.browser.BrowserActivity" />
     </application>
 
 </manifest>
