--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,81 +1,129 @@
 variables:
   BUILD_OUTPUT_DIR: app/build/outputs/apk
+  TESTS_XML_DIR: app/build/outputs/androidTest-results
+  IMG_NAME: system-images;android-23;google_apis;x86
+  DEVICE_TYPE: "Nexus 4"
+  DEVICE_NAME: Nexus4Emu
+  DEV_VIDEO_DIR: /mnt/sdcard/DCIM
+  SEARCH_DIR: cliqzSearch
 
 trigger:
   - master
 
 jobs:
 - job: Build
+  
   pool:
-    vmImage: 'ubuntu-latest'
+    vmImage: 'macOS 10.13'
+  
   steps:
+  
   - task: NodeTool@0
     inputs:
       versionSpec: '10.x'
     displayName: 'Install Node.js'
 
-  - script: |
-      cd cliqzSearch
+  - bash: |
       npm ci
-      mkdir -p build
       npm run build
+    workingDirectory: $(SEARCH_DIR)
     displayName: 'Build search (debug)'
 
   - task: Gradle@2
     inputs:
       gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
       tasks: 'assembleDebug'
     displayName: 'Assemble Debug'
 
-  - script: |
-      cd cliqzSearch
-      npm run build:prod
+  - bash: npm run build:prod
+    workingDirectory: $(SEARCH_DIR)
     displayName: 'Build search (release)'
 
   - task: Gradle@2
     inputs:
       gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
       tasks: 'assembleRelease'
     displayName: 'Assemble Release'
 
   - task: CopyFiles@2
     inputs:
       contents: '$(BUILD_OUTPUT_DIR)/**/*.apk'
-      targetFolder: '$(build.artifactStagingDirectory)'
+      targetFolder: '$(Build.ArtifactStagingDirectory)'
     
   - task: PublishBuildArtifacts@1
-    displayName: 'Publish APKs'
+    displayName: 'Publish'
+    inputs:
+      pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      artifactName: '$(Build.BuildId).Build'
+      publishLocation: 'Container'
 
 - job: Test
+  
   pool:
     vmImage: 'macOS 10.13'
+  
   steps:
+  
   - task: NodeTool@0
     inputs:
       versionSpec: '10.x'
     displayName: 'Install Node.js'
-  - script: |
-      cd cliqzSearch
+  
+  - bash: |
       npm ci
-      mkdir -p build
       npm run build
+    workingDirectory: $(SEARCH_DIR)
     displayName: 'Build search'
-  - script: |
-      echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd -n xamarin_android_emulator -k 'system-images;android-27;google_apis;x86' --force
-      echo $ANDROID_HOME/emulator/emulator -list-avds
-      echo "Starting emulator"
-      nohup $ANDROID_HOME/emulator/emulator -avd xamarin_android_emulator -no-snapshot > /dev/null 2>&1 &
-      $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
+
+  - bash: |
+      $ANDROID_HOME/tools/bin/sdkmanager "$(IMG_NAME)"
+      $ANDROID_HOME/tools/bin/avdmanager create avd --device "$(DEVICE_TYPE)" --package "$(IMG_NAME)" --abi google_apis/x86 --name "$(DEVICE_NAME)"
+      $ANDROID_HOME/emulator/emulator -avd $(DEVICE_NAME) &
+      echo $! >> emu.pid
+      sleep 60
       $ANDROID_HOME/platform-tools/adb devices
-      echo "Emulator started"
-    displayName: "Start Emulator"
+    displayName: 'Setup and Launch Emulator'
+
+  - bash: |
+      $ANDROID_HOME/platform-tools/adb shell """
+      mount -o rw,remount rootfs /;
+      chmod 0777 /mnt/sdcard;
+      exit
+      """
+      $ANDROID_HOME/platform-tools/adb shell mkdir -p $(DEV_VIDEO_DIR)/
+      $ANDROID_HOME/platform-tools/adb shell '''
+        for i in $(seq 1 1 20)
+        do
+          screenrecord $(DEV_VIDEO_DIR)/test"${i}".mp4
+        done ''' &
+      echo $! > video.pid
+      $ANDROID_HOME/platform-tools/adb logcat -c
+      $ANDROID_HOME/platform-tools/adb logcat > $(Build.ArtifactStagingDirectory)/device.log &
+      echo $! > logcat.pid
+    displayName: 'Start Video Record and Logcat'
+
   - task: Gradle@2
     inputs:
       gradleWrapperFile: 'gradlew'
-      gradleOptions: '-Xmx3072m'
       publishJUnitResults: true
-      testResultsFiles: '**/TEST-*.xml'
+      testResultsFiles: '$(TESTS_XML_DIR)/**/TEST-*.xml'
       tasks: 'connectedGeckoNightlyX86DebugAndroidTest'
-    displayName: 'Test'
+    displayName: 'Run Tests'
+
+  - bash: |
+      kill -9 $(cat video.pid) || true
+      sleep 10
+      $ANDROID_HOME/platform-tools/adb pull $(DEV_VIDEO_DIR)/ $(Build.ArtifactStagingDirectory)/ || true
+      kill -9 $(cat logcat.pid) || true
+      adb kill-server
+      kill -9 $(cat emu.pid)
+    condition: always()
+    displayName: 'Copy Videos and Clean Up'
+
+  - task: PublishBuildArtifacts@1
+    condition: always()
+    displayName: 'Publish'
+    inputs:
+      pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      artifactName: '$(Build.BuildId).Test'
+      publishLocation: 'Container'
