--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,6 +82,17 @@ jobs:
       options: '-PversionName=1.0.$(Build.BuildNumber)'
     displayName: 'Assemble Release'
 
+  - task: AndroidSigning@2
+    inputs:
+      apkFiles: '$(BUILD_OUTPUT_DIR)/**/*.apk'
+      jarsign: true
+      jarsignerKeystoreFile: 'upload-keystore.jks'
+      jarsignerKeystorePassword: '$(keystore-password)'
+      jarsignerKeystoreAlias: 'upload'
+      jarsignerKeyPassword: '$(upload-key-password)'
+      zipalign: true
+      zipalignFile: '/Users/vsts/Library/Android/sdk/build-tools/28.0.3/zipalign'
+
   - task: CopyFiles@2
     inputs:
       contents: '$(BUILD_OUTPUT_DIR)/**/*.apk'
