--- a/cliqzSearch/package.json
+++ b/cliqzSearch/package.json
@@ -10,7 +10,7 @@
     "react-native-fs": "^2.13.3"
   },
   "dependencies": {
-    "browser-core": "https://s3.amazonaws.com/cdncliqz/update/edge/rn-ghostery-android/v3.36/1.36.0.09794d6.tgz",
+    "browser-core": "https://s3.amazonaws.com/cdncliqz/update/edge/rn-ghostery-android/master/1.38.0.1b47.5defa9a.tgz",
     "cliqz-logo-database": "^0.1.2",
     "moment": "^2.24.0",
     "react": "^16.6.3",
