new tab pages renders top domains

--- a/cliqzSearch/package.json
+++ b/cliqzSearch/package.json
@@ -10,8 +10,9 @@
     "react-native-fs": "^2.13.3"
   },
   "dependencies": {
+    "@cliqz/component-ui-logo": "^0.2.1",
     "browser-core": "https://s3.amazonaws.com/cdncliqz/update/edge/rn-ghostery-android/master/1.38.0.1b47.5defa9a.tgz",
-    "cliqz-logo-database": "^0.1.2",
+    "cliqz-logo-database": "^0.2.1",
     "moment": "^2.24.0",
     "react": "^16.6.3",
     "react-native": "^0.59.1",
